--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://WayneGeet.github.io/oviedo_fl/",
+  "homepage":"https://hitorclick.github.io/oviedo_fl/",
   "name": "markers",
   "version": "0.1.0",
   "private": true,
